src/main/resources/static/styles/main.css
#main-nav li {
    padding-left: 25px;
    padding-right: 0px;
    margin-left: 0px;
    list-style-type: none;
    display: inline-block;
}


/* TODO: Need to select the link*/
.chosen a {
    text-decoration: underline;
}

/* TODO: Need to select the link */
a{
    text-decoration: none;
}

ul{
    padding-inline-start: 0px;
}


:root {
    background-color: #f5f5f5;
    padding: 0px;
    margin: 0px;
}

/* TODO: Remove the padding to different  */
.centered{
    text-align: center;
    padding-top: 16px;
}

.statement-div{
    margin-left: 100px ;
    margin-right: 100px ;
}

.statement-paragraph{
    word-break: inherit;
}

header {
    text-align: center;
    margin-top: 0px;
    vertical-align: middle;
}

.main-image {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

hr{
    margin-left: 100px;
    margin-right: 100px;
}

a{
    color: rgba(28,28,28,.7);
}


h1 {
    font-family: garamond-premier-pro-display;
    /*border-style: solid;*/
    /*border-color: red;*/
}

#main {
    background-color: #fff;
    position: static;
    margin-top: 80px;
    margin-right: 200px;
    margin-left: 200px;
    border-style: solid;
    color: #4d4e4f;
    border-color: #eee;
}


p{
    margin: 30px;
    /*border-style: solid;*/
    /*border-color: red;*/
}

